--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "syntax",
     "theme"
   ],
-  "repository": "https://github.com/vuwnu/gunmetal",
+  "repository": "https://github.com/gunmetal-theme/gunmetal-syntax",
   "license": "MIT",
   "engines": {
     "atom": ">=1.0.0 <2.0.0"
